25 MAY 26.txt
show databases
admin   40.00 KiB
config  12.00 KiB
local   72.00 KiB
shows dbs
SyntaxError: Missing semicolon. (1:5)

> 1 | shows dbs
    |      ^
show dbs
admin   40.00 KiB
config  12.00 KiB
local   72.00 KiB
use vit
switched to db vit
db
vit
db.dropDatabase()
{ ok: 1, dropped: 'vit' }
show databases
admin   40.00 KiB
config  12.00 KiB
local   72.00 KiB
show databases
admin   40.00 KiB
config  60.00 KiB
local   72.00 KiB
db.createCollection("Employee");
{ ok: 1 }
show collections
Employee
db.Employee.insert({name:'Priyanshi',address:'Faridabad'})
writeResults({"nInserted":1})
DeprecationWarning: Collection.insert() is deprecated. Use insertOne, insertMany, or bulkWrite.
ReferenceError: writeResults is not defined
b.Employee.insert({name:'Priyanshi',address:'Faridabad'})
ReferenceError: b is not defined
db.Employee.insert({name:'Priyanshi',address:'Faridabad'})
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a145d9cb96eadcd09cb7739')
  }
}

db.Employee.insert({name:'Riya',address:'Mumbai'})
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('6a145dcfb96eadcd09cb773a')
  }
}
db.Employee.find()
{
  _id: ObjectId('6a145d7eb96eadcd09cb7738'),
  name: 'Priyanshi',
  address: 'Faridabad'
}
{
  _id: ObjectId('6a145d9cb96eadcd09cb7739'),
  name: 'Priyanshi',
  address: 'Faridabad'
}
{
  _id: ObjectId('6a145dcfb96eadcd09cb773a'),
  name: 'Riya',
  address: 'Mumbai'
}